<resources>
    <string name="app_name">Unidad2_2</string>
    <string name="hola_mundo">Hola mundo</string>
    <string name="bot_n">Botón</string>
    <string name="hecho">Hecho</string>
    <string name="texto">Nuevo_</string>
    <string name="pulsado">Pulsado</string>
    <string name="rojo">Rojo</string>
    <string name="azul">Azul</string>
    <string name="amarillo">Amarillo</string>
</resources>